mobile version overflow fixed

--- a/nyhetssida/includes/css/footer.css
+++ b/nyhetssida/includes/css/footer.css
@@ -5,6 +5,7 @@ footer {
     display: flex;
     justify-content: center;
     /* border: 1px solid black; */
+    width: 100vw;
 }
 
 #footerWrap {
